# shmup

./: .gitignore  CMakeLists.txt  Makefile  README.md  package-lock.json  package.json
.github/workflows/: static.yml
Apps/: clear.cpp
Doc/: design.md
Inc/: glad.4.1.h
Src/: main.cpp  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h
Src/shaders/: default.frag  default.vert
app/: CMakeLists.txt
app/inc/: emscripten_mainloop.h
app/lib/: stb_image.cpp
app/src/: game.cpp  game.h  main.cpp  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  sprite_cache.cpp  sprite_cache.h  texture.cpp  texture.h  ui_manager.cpp  ui_manager.h  window_manager.cpp  window_manager.h
app/src/components/: ai.h  hitbox.h  projectile.h  sprite.h  state.h  transform.h  velocity.h
app/src/ecs/: component_array.h  component_manager.h  coordinator.h  entity_manager.h  event.h  event_manager.h  system.h  system_manager.h  types.h
app/src/shaders/: font.vert
app/src/systems/: ai_system.cpp  ai_system.h  animation_system.cpp  animation_system.h  background_system.cpp  background_system.h  collision_system.cpp  (+11 more)
doc/: design.md  ecs_design.md  game_design.md
docs/: engine_design.md  game_design.md
inc/: glu.h
lib/: stb_image.cpp
src/: component.cpp  component.h  entity.cpp  entity.h  game.cpp  game.h  main.cpp  position.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  sprite.cpp  sprite.h  sprite_cache.cpp  sprite_cache.h  texture.cpp  texture.h  ui_manager.cpp  ui_manager.h  utils.cpp  utils.h  window_manager.cpp  window_manager.h
src/components/: ai.h  hitbox.h  player.h  projectile.h  sprite.h  transform.h  velocity.h
src/ecs/: component.h  component_array.h  component_manager.h  coordinator.h  entity.h  entity_manager.h  event.h  event_manager.h  system.h  system_manager.h  types.h
src/shaders/: default.frag  default.vert  font.frag
src/systems/: ai_system.cpp  ai_system.h  animation_system.cpp  background_system.cpp  background_system.h  cleanup_system.cpp  cleanup_system.h  collision_system.cpp  collision_system.h  control_system.cpp  control_system.h  movement_system.cpp  movement_system.h  physics_system.cpp  physics_system.h  projectile_system.cpp  projectile_system.h  spawn_system.cpp  spawn_system.h  sprite_system.cpp  sprite_system.h  text_system.cpp  text_system.h
tests/: local.js
web/: index.html
web/assets/: util.js
(+12 files in other folders)
